--- a/style.css
+++ b/style.css
@@ -56,4 +56,51 @@ h3 {
     #mainLeft {
         border-right: 1px solid lightgray;
     }
-    
+    .read-more-state {
+        display: none;
+      }
+      
+      .read-more-target {
+        opacity: 0;
+        max-height: 0;
+        font-size: 0;
+        transition: .25s ease;
+      }
+      
+      .read-more-state:checked ~ .read-more-wrap .read-more-target {
+        opacity: 1;
+        font-size: inherit;
+        max-height: 999em;
+      }
+      
+      .read-more-state ~ .read-more-trigger:before {
+        content: 'Show more';
+      }
+      
+      .read-more-state:checked ~ .read-more-trigger:before {
+        content: 'Show less';
+      }
+      
+      .read-more-trigger {
+        cursor: pointer;
+        display: inline-block;
+        padding: 0 .5em;
+        color: #666;
+        font-size: .9em;
+        line-height: 2;
+        border: 1px solid #fff;
+        border-radius: .25em;
+      }
+      
+      /* Other style */ 
+      body {
+        padding: 2%;
+      }
+      
+      p {
+        padding: 2%;
+        background: #ffffff;
+        color: #000000000;
+        border: 1px solid #fffff;
+        border-radius: .25em;
+      }
