--- a/style.css
+++ b/style.css
@@ -102,3 +102,90 @@ h3 {
         border: 1px solid #ffff;
         border-radius: .25em;
       }
+
+
+      .dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
+
+
+/* Accordian Items */
+.collapse {
+	text-align:left;
+}
+
+.collapse > * + *{
+  display:none;
+  
+ }
+.collapse > *{
+  cursor:pointer;
+  }
+  
+.collapse:focus{
+  outline:none;
+}
+.collapse:focus > * + *{
+  display:block; 
+}
+
+.accordian-cta {
+	width:20%;
+	float: right;
+	vertical-align:middle;
+	text-align:right;
+}
+
+.accordian-title {
+	width:100%;
+	max-width:1000px;
+	
+	text-indent:10px;
+	margin-bottom:10px;
+	color:rgb(71,70,70);
+	font-size:1.17em;
+	font-family:arial, verdana, sans-serif;
+	font-weight:bold;
+	padding: 5px;
